[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightlanp"
dynamic = ["version"]
description = "Nightly Light curve Analysis with Neural Processes: a light-curve wrapper around keras-neural-processes for time-domain astronomy."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Siddharth Chaini", email = "sidchaini@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "scipy>=1.10",
    "scikit-learn>=1.6.0",
    "polars>=1.0",
    "joblib>=1.3.2",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "keras>=3",
    "keras-neural-processes>=0.1"
]

[tool.setuptools.dynamic]
version = {attr = "nightlanp.__version__"}

[project.urls]
Repository = "https://github.com/sidchaini/NightLANP"
